# Wallpaper-Manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.superpowers/sdd/: final-fix-report.md
assets/: entitlements.plist  icon.icns
docs/: README.md
docs/superpowers/plans/: 2026-07-23-wallpaper-manager.md
docs/superpowers/specs/: 2026-07-23-wallpaper-manager-design.md  2026-07-24-reliability-and-sync-design.md
scripts/: pack_macos.sh  pack_macos_onedir.py
tests/: test_background_cover_dom.py  test_config_backup.py  test_gallery.py  test_ghostty.py  test_image_service.py  test_jetbrains.py  test_opacity.py  test_path_overrides.py  test_path_resolve.py  test_paths.py  test_service.py  test_settings_json.py  test_state_store.py  test_ui.py
wallpaper_manager/: __main__.py  runtime_branding.py
wallpaper_manager/adapters/: __init__.py  background_cover_dom.py  base.py  cursor.py  ghostty.py  jetbrains.py  settings_json.py  vscode.py
wallpaper_manager/core/: config_backup.py  image_service.py  models.py  opacity.py  path_config.py  service.py  state_store.py
wallpaper_manager/detect/: paths.py
wallpaper_manager/gallery/: __init__.py  decrypt.py  models.py  nuanxin_client.py
wallpaper_manager/ui/: __init__.py  app.py  gallery_panel.py  library_panel.py  motion.py  settings_panel.py  theme.py
