[project]
name = "wallpaper-manager"
version = "0.1.0"
description = "Unified wallpaper manager for VS Code, Cursor, IDEA, PyCharm"
requires-python = ">=3.11"
dependencies = [
  "flet>=0.27.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
wallpaper-manager = "wallpaper_manager.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wallpaper_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
