[project]
name = "wallpaper-manager"
version = "0.1.0"
description = "Unified wallpaper manager for VS Code, Cursor, IDEA, PyCharm, and Ghostty"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "shayuaidoudou", email = "3508309853@qq.com" },
]
keywords = [
  "wallpaper",
  "vscode",
  "cursor",
  "intellij",
  "pycharm",
  "ghostty",
  "flet",
  "desktop",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment",
]
dependencies = [
  "flet>=0.27.0",
  "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/shayuaidoudou/Wallpaper-Manager"
Repository = "https://github.com/shayuaidoudou/Wallpaper-Manager"
Issues = "https://github.com/shayuaidoudou/Wallpaper-Manager/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
wallpaper-manager = "wallpaper_manager.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wallpaper_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
